# ReplicacioEpidemica

./: .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Client.cpp  Commons.h  CoreNode.cpp  CoreNode.h  FileWatcher.cpp  FileWatcher.h  LamportMutex.cpp  LamportMutex.h  LayerOneNode.cpp  LayerOneNode.h  LayerTwoNode.cpp  LayerTwoNode.h  Lock.h  Log.cpp  Log.h  MsgHandler.cpp  MsgHandler.h  Node.cpp  Node.h  README.md  Server.cpp  Server.h  Socket.cpp  Socket.h  Transaction.cpp  Transaction.h  TransactionReader.cpp  TransactionReader.h  main.cpp
ClientTransactions/: A1_Transactions.txt  A2_Transactions.txt  A3_Transactions.txt  Examples.txt
dependencies/easywsclient/: easywsclient.cpp
src/: Commons.h  Controller.cpp  Controller.h  FileWatcher.cpp  FileWatcher.h  LamportMutex.cpp  LamportMutex.h  Lock.h  Log.h  MsgHandler.cpp  MsgHandler.h  Transaction.cpp  Transaction.h  TransactionReader.cpp  TransactionReader.h  main.cpp
src/mutex/: LamportMutex.cpp  LamportMutex.h  Lock.h  MsgHandler.cpp
src/nodes/: CoreNode.cpp  CoreNode.h  LayerOneNode.cpp  LayerOneNode.h  LayerTwoNode.cpp  LayerTwoNode.h  MsgHandler.cpp  MsgHandler.h  Node.cpp  Node.h
src/sockets/: Client.cpp  Client.h  Server.cpp  Server.h  Socket.cpp  Socket.h
src/transactions/: FileWatcher.cpp  FileWatcher.h  Transaction.cpp  Transaction.h  TransactionReader.cpp  TransactionReader.h
src/web_socket/: WsClient.cpp  WsClient.h
